@@ -1,3 +1,11 @@
+Thu Feb  4 18:45:14 1999  Anthony Green  <green@cygnus.com>
+
+	* gnu/testlet/TestHarness.java (fail): New method.
+
+	* gnu/testlet/java/lang/Character/CharInfo.java: Add missing
+	copyright notice.
+	* gnu/testlet/java/lang/Character/unicode.java: Ditto.
+
 Thu Feb  4 06:26:53 1999  Anthony Green  <green@cygnus.com>
 
 	* gnu/testlet/java/util/BitSet/jdk10.java: New file from
